--- a/exhibit1.html
+++ b/exhibit1.html
@@ -16,17 +16,17 @@
       <a class="contactRow" href="gallery.html">Gallery</a>
     </nav>
     <main class="article">
-      <h1 style="margin-bottom: 0">Underground Base</h1>
+      <h1 style="margin-bottom: 0">Secret Base</h1>
       <p style="margin-top: 0">
-        The home and final resting place of a great sage. 
-        What secrets can it hold?
+        The home and final resting place of a great sage. What secrets can it
+        hold?
       </p>
       <section class="section">
         <img src="Images/Base/img1.webp" alt="BaseEntraceClosed" />
         <img src="Images/Base/img00.webp" alt="BaseEntraceOpened" />
         <p><i>Entrance to the base, normally hidden in plain sight</i></p>
         <p>
-          Located somewhere in the thick wilderness.
+          Located somewhere in the thick wilderness of the Eastern Continent.
         </p>
       </section>
       <section class="section">
