--- a/exhibit3.html
+++ b/exhibit3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Base</title>
+    <title>Village</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,9 +18,9 @@
     <main class="article">
       <h1 style="margin-bottom: 0">Village</h1>
       <p style="margin-top: 0">
-        Village located somewhere on the outskirts of the continent that is now
-        called "Lost" after a new type of weapon decimated everything on it's
-        surface. It's a shining example of human perserverance.
+        A village located somewhere on the outskirts of the continent that is
+        now called "Lost" after a new type of weapon decimated everything on
+        it's surface. It's a shining example of human perserverance.
       </p>
       <section class="section">
         <img src="Images/Village/img0.webp" alt="Panorama" />
