--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <a class="contactRow" href="gallery.html">Gallery</a>
       </nav>
 
-      <div class="titleMain">
-        <h1 id="welcomeText">Welcome to the world of [redacted]</h1>
+      <div class="titleMain" style="padding-bottom: 2rem">
+        <h1 id="welcomeText">Welcome to the world of <br />Nudy2</h1>
         Feel free to explore as much as you want
       </div>
       <a href="exhibit1.html" class="item">
@@ -35,7 +35,9 @@
         <img src="Images/Village/img00.webp" alt="Village" class="background" />
         <h1 class="foreground">Village</h1>
       </a>
-      <footer class="footer" style="padding-top: 10vh; padding-bottom: 10vh;">Bartłomiej Kaczyński</footer>
+      <footer class="footer" style="padding-top: 10vh; padding-bottom: 10vh">
+        Bartłomiej Kaczyński
+      </footer>
     </main>
     <script src="scramblingText.js"></script>
   </body>
